--- a/themes/schoolofdata/templates/list.html
+++ b/themes/schoolofdata/templates/list.html
@@ -5,9 +5,14 @@
   <div>
     <div class="description">
       {% block description %}
-      <p>This site tracks <a href="/about">Data Packages</a> related to the topic of <b>Vaccinations</b> - <a href="/contact">further contributions</a> are welcome!
-      </p><p>These datasets will be supported at an upcoming <b><a href="https://www2.deloitte.com/ch/en/pages/careers/articles/hackathon.html" target="_blank">Hackathon</a></b>
-      </p><p>This repository is maintained by the <a href="http://schoolofdata.ch">School of Data</a> working group in Switzerland. Need tools to work with data? <a href="https://github.com/schoolofdata-swiss/datacentral/wiki" target="_blank">Visit our wiki</a>.
+      <p>This site tracks <a href="/about">Data Packages</a> related to
+        <a href="http://tourism.opendata.ch" target="_blank">Open Tourism Data</a> -
+        <a href="/contact">further contributions</a> are welcome!
+      </p><p>This repository is maintained by the
+        <a href="http://schoolofdata.ch" target="_blank">School of Data</a>,
+        Swiss chapter.
+        Need tools to work with data? Visit
+        <a href="http://toolbox.schoolofdata.ch" target="_blank">toolbox.schoolofdata.ch</a>.
       {% endblock description %}
     </div>
     <div class="main">
