--- a/themes/foodopendata/templates/base.html
+++ b/themes/foodopendata/templates/base.html
@@ -30,7 +30,7 @@
       <div>
         <h1>
           <a href="/" id="logo">
-            <img src="/img/okfn-ch.jpg" alt="Open Knowledge CH logo">
+            <img src="/img/openfood-logo.png" alt="Open Food Data logo">
           </a>
           <span id="sitename">Datacentral</span>
         </h1>
@@ -53,6 +53,12 @@
             </a>
           </li>
         </ul>
+        <p>
+          Powered by <a rel="external" target="_blank" href="https://github.com/schoolofdata-ch/datacentral">
+            <strong>Datacentral</strong></a><br>
+            <a href="https://github.com/centraldedados/datacentral"><img alt="star this repo" src="http://githubbadges.com/star.svg?user=centraldedados&repo=datacentral&style=flat" /></a>
+            <a href="https://github.com/centraldedados/datacentral/fork"><img alt="fork this repo" src="http://githubbadges.com/fork.svg?user=centraldedados&repo=datacentral&style=flat" /></a>
+        </p>
       </div>
     </footer>
     <script src="/js/jquery-3.0.0.min.js"></script>
