--- a/themes/foodopendata/templates/list.html
+++ b/themes/foodopendata/templates/list.html
@@ -5,11 +5,9 @@
   <div>
     <div class="description">
       {% block description %}
-      <p>This site tracks <a href="/about">Data Packages</a> related to the topic of Food - from production to nutrition. A list of further suggestions may be <a href="https://docs.google.com/spreadsheets/d/1W27W3vuD5mj1CDWbGJhjECabRbsqVzt_8EhPJV1l5b0/pubhtml" target="_blank">found here</a> - <a href="https://goo.gl/forms/J5nHDCBvu3VGmonE3" target="_blank">further contributions</a> are welcome!
-      </p><p>We aim to use these datasets at the upcoming <b><a href="http://hack.opendata.ch" target="_blank">Open Food Hackdays</a></b>
-      </p><p><a rel="external" target="_blank" href="http://hack.opendata.ch"><img src="https://food.opendata.ch/wp-content/themes/food.opendata.ch/images/logo.png" alt="food.opendata.ch" style="max-width:100%"></a>
-      </p><p><small><a target="_blank" href="https://calendar.google.com/calendar/event?action=TEMPLATE&tmeid=NjVnajZlOWc3NWhqYWI5bmM5ajZhYjlrNjhvM2liOXBjNHJqNGJiNjZoaGppb2hwNjhvM2dkMWljNCAwb2hxdG01aDRiNjU4dGs2ZGtlNWhkNTdzY0Bn&tmsrc=0ohqtm5h4b658tk6dke5hd57sc%40group.calendar.google.com">February 10-11, 2017</a></small>
-      </p><p>This repository was started during a <a href="http://schoolofdata.ch">School of Data</a> expedition on <a href="https://schoolofdata-ch.github.io/2016/12/14/Food-Data-Expedition.html" target="_blank">January 14, 2017</a>. Need tools to work with data? <a href="https://github.com/schoolofdata-swiss/datacentral/wiki" target="_blank">Visit our wiki for links</a>.
+      <p>This site tracks <a href="/about">Data Packages</a> related to the topic of Food - from production to nutrition - for use at the <b><a href="http://food.opendata.ch" target="_blank">Open Food Hackdays</a>.
+      </p><p>This repository was started during a <a href="http://schoolofdata.ch">School of Data</a> expedition. Find out <a href="https://schoolofdata-ch.github.io/2018/01/01/Food-Data-Expedition.html" style="font-weight:bold">how to contribute</a> here. Need tools to work with data? <a href="https://github.com/schoolofdata-swiss/datacentral/wiki" target="_blank">Visit our wiki for links</a>.
+      </p><a href="http://schoolofdata.ch"><img src="/img/scoda-horizontal-212x60-nontransparent.png"></a>
       {% endblock description %}
     </div>
     <div class="main">
