--- a/themes/foodopendata/templates/base.html
+++ b/themes/foodopendata/templates/base.html
@@ -21,7 +21,7 @@
       <div>
         <ul>
             <li><a href="/about/">About</a></li>
-            <li><a href="/contact/">Contact</a></li>
+            <li><a href="https://schoolofdata-ch.github.io/index.en.html#contact">Contact</a></li>
           <li><a href="/api.json">API</a></li>
         </ul>
       </div>
