--- a/themes/foodopendata/templates/base.html
+++ b/themes/foodopendata/templates/base.html
@@ -29,9 +29,9 @@
     <header class="header">
       <div>
         <h1>
-          <a href="/" id="logo">
-            <img src="/img/openfood-logo.png" alt="Open Food Data logo">
-          </a>
+          <!--<a href="/" id="logo">
+            <img src="" alt="Open Food Data logo">
+          </a>-->
           <span id="sitename">Datacentral</span>
         </h1>
       </div>
