--- a/themes/foodopendata/templates/list.html
+++ b/themes/foodopendata/templates/list.html
@@ -5,9 +5,7 @@
   <div>
     <div class="description">
       {% block description %}
-      <p>This site tracks <a href="/about">Data Packages</a> related to the topic of Food - from production to nutrition - for use at the <b><a href="http://food.opendata.ch" target="_blank">Open Food Hackdays</a>.
-      </p><p>This repository was started during a <a href="http://schoolofdata.ch">School of Data</a> expedition. Find out <a href="https://schoolofdata-ch.github.io/2018/01/01/Food-Data-Expedition.html" style="font-weight:bold">how to contribute</a> here. Need tools to work with data? <a href="https://github.com/schoolofdata-swiss/datacentral/wiki" target="_blank">Visit our wiki for links</a>.
-      </p><a href="http://schoolofdata.ch"><img src="/img/scoda-horizontal-212x60-nontransparent.png"></a>
+        {{ welcome_text }}
       {% endblock description %}
     </div>
     <div class="main">
