--- a/themes/foodopendata/templates/base.html
+++ b/themes/foodopendata/templates/base.html
@@ -14,9 +14,6 @@
   </head>
   <body>
 
-	<!-- For nomad URL preview -->
-    <img src="/img/share-image.png" class="hide">
-
     <nav class="nav">
       <div>
         <ul>
@@ -29,10 +26,12 @@
     <header class="header">
       <div>
         <h1>
-          <!--<a href="/" id="logo">
-            <img src="" alt="Open Food Data logo">
-          </a>-->
-          <span id="sitename">Datacentral</span>
+          <a href="/">
+            <img id="logo" src="/img/datapackage.png" alt="Homepage">
+            <span id="sitename">
+              Datacentral
+            </span>
+          </a>
         </h1>
       </div>
     </header>
