--- a/themes/foodopendata/templates/dataset.html
+++ b/themes/foodopendata/templates/dataset.html
@@ -48,7 +48,7 @@
         </div>
         <hr>
         <div class="sources">
-          <h4>Data sources</h4>
+          <h4>Sources</h4>
           <ul>
             {% for s in datapkg.sources %}
               <li>
