Fixed Py 3.6 and SSL issue

--- a/themes/opendatach/templates/base.html
+++ b/themes/opendatach/templates/base.html
@@ -40,7 +40,7 @@
       <div>
         <p>
           Hosted and supported by
-            <a rel="external" target="_blank" href="http://food.opendata.ch">
+            <a rel="external" target="_blank" href="http://opendata.ch">
               <strong>Opendata.ch</strong></a>
         </p>
         <ul>
@@ -55,8 +55,8 @@
         <p>
           Powered by <a rel="external" target="_blank" href="https://github.com/schoolofdata-ch/datacentral">
             <strong>Datacentral</strong></a><br>
-            <a href="https://github.com/centraldedados/datacentral"><img alt="star this repo" src="http://githubbadges.com/star.svg?user=centraldedados&repo=datacentral&style=flat" /></a>
-            <a href="https://github.com/centraldedados/datacentral/fork"><img alt="fork this repo" src="http://githubbadges.com/fork.svg?user=centraldedados&repo=datacentral&style=flat" /></a>
+            <a href="https://github.com/centraldedados/datacentral"><img alt="star this repo" src="https://githubbadges.com/star.svg?user=centraldedados&repo=datacentral&style=flat" /></a>
+            <a href="https://github.com/centraldedados/datacentral/fork"><img alt="fork this repo" src="https://githubbadges.com/fork.svg?user=centraldedados&repo=datacentral&style=flat" /></a>
         </p>
       </div>
     </footer>
